--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
    <a href="https://www.youtube.com/channel/UCsvWmnNTLqrNF26vFBgJsKQ"><img class="icon" id="youtube" src="images/youtube.png"></a>
    </div>
    
-   <h2>email: bludetiger@gmail.com</h2>
+   <h2 id="gmail">email: bludetiger@gmail.com</h2>
    
    
 <div class="bottom">
