--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@ Nostro graecis vulputate vis cu, eum saepe utamur recusabo ei. Eu fugit delicata
    <a href="https://www.facebook.com/wearebits"><img class="icon" id="facebook" src="images/fb.jpg"></a>
    <a href="https://www.instagram.com/wearebits"><img class="icon" id="instagram" src="images/instagram-icon.png"></a>
    <a href="https://www.twitter.com/wearebits"><img class="icon" id="twitter" src="images/twitter-icon-black.png"></a>
-   <a href="https://www.twitter.com/wearebits"><img class="icon" id="twitter" src="images/soundcloud-circled.svg"></a>
+   <a href="https://www.soundcloud.com/wearebits"><img class="icon" id="twitter" src="images/soundcloud-circled.svg"></a>
      </div>
 
    
